--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
   const itemsList = document.querySelector('.plates');
   const items = [];
 
+  function addItem(e) {
+      // this will stop the form automatically reloading page
+      e.preventDefault(); 
+      console.log('hello');
+  }
+
+  addItems.addEventListener('submit', addItem); // submit events are better than click as it listens for more
+
 </script>
 
 
