--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <script>
   const addItems = document.querySelector('.add-items');
   const itemsList = document.querySelector('.plates');
-  const items = [];
+  const items = JSON.parse(localStorage.getItem('items')) || [];
 
   function addItem(e) {
       // this will stop the form automatically reloading page
@@ -42,6 +42,7 @@
 
       items.push(item);
       populateList(items, itemsList);
+      localStorage.setItem('items', JSON.stringify(items)); // stores in local storage so remains when page is refreshed
       this.reset(); // resets the form after submission 
   }
 
@@ -57,6 +58,8 @@
   }
 
   addItems.addEventListener('submit', addItem); // submit events are better than click as it listens for more
+
+  populateList(items, itemsList); // creates list
 
 </script>
 
